[gd_scene load_steps=2 format=3 uid="uid://cvl76duuym1wq"]

[ext_resource type="Script" uid="uid://8jeht8ufkjqk" path="res://src/UI/Shared/MusicMenu/MusicMenu.gd" id="1_gcm4m"]

[node name="MusicPlayer" type="BoxContainer" node_paths=PackedStringArray("_song_selector_button", "_progress_slider", "_previous_song_button", "_play_pause_button", "_next_song_button", "_visibility_button")]
editor_description = "UI-104"
offset_right = 150.0
offset_bottom = 110.0
mouse_filter = 2
vertical = true
script = ExtResource("1_gcm4m")
_song_selector_button = NodePath("SongSelectorButton")
_progress_slider = NodePath("ProgressSlider")
_previous_song_button = NodePath("ButtonList/PreviousSongButton")
_play_pause_button = NodePath("ButtonList/PlayPauseButton")
_next_song_button = NodePath("ButtonList/NextSongButton")
_visibility_button = NodePath("MusicUIVisibilityButton")

[node name="SongSelectorButton" type="OptionButton" parent="."]
editor_description = "UI-105, UI-107, UI-110, UIFUN-92"
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
mouse_force_pass_scroll_events = false
alignment = 1
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="ProgressSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
focus_mode = 0

[node name="ButtonList" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="PreviousSongButton" type="Button" parent="ButtonList"]
editor_description = "UI-109"
layout_mode = 2
focus_mode = 0
text = "<"

[node name="PlayPauseButton" type="Button" parent="ButtonList"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
focus_mode = 0
text = "▶"

[node name="NextSongButton" type="Button" parent="ButtonList"]
editor_description = "UI-108"
layout_mode = 2
focus_mode = 0
text = ">"

[node name="MusicUIVisibilityButton" type="Button" parent="."]
editor_description = "UI-106"
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
toggle_mode = true
text = "⬆"

[connection signal="item_selected" from="SongSelectorButton" to="." method="_on_option_button_item_selected"]
[connection signal="drag_ended" from="ProgressSlider" to="." method="_on_progress_slider_drag_ended"]
[connection signal="drag_started" from="ProgressSlider" to="." method="_on_progress_slider_drag_started"]
[connection signal="pressed" from="ButtonList/PreviousSongButton" to="." method="_on_previous_song_button_pressed"]
[connection signal="pressed" from="ButtonList/PlayPauseButton" to="." method="_on_play_pause_button_pressed"]
[connection signal="pressed" from="ButtonList/NextSongButton" to="." method="_on_next_song_button_pressed"]
[connection signal="pressed" from="MusicUIVisibilityButton" to="." method="_on_music_ui_visibility_button_pressed"]
